tests/specs/ecosystem/clappcodes/transporter/0_1_3.test
clappcodes/transporter/0.1.3
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
    at file://<tmpdir>/server.ts:1:146

error: Type checking failed.

